# appstore-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.py
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
alembic/: init.md
scripts/: create-github-runner-vm.sh  create-server.sh
src/: celery_app.py  main.py
src/api/: __init__.py  admin.py  deployments.py
src/core/: auth.py  config.py  database.py  dependencies.py  exceptions.py  middleware.py  openstack_client.py  response_builder.py  responses.py
src/models/: course.py  course_group.py  course_member.py  deployment.py  deployment_instance.py  deployment_instance_access.py  deployment_log.py  group_member.py  openstack_project.py  template.py  template_category.py  template_category_assignment.py  template_version.py  user.py
src/repositories/: base_repository.py  deployment_repository.py  user_repository.py
src/schemas/: admin.py  course.py  deployment.py  deployment_instance_access.py  openstack.py  template.py  user.py
src/services/: deployment_service.py  openstack_cache_service.py  openstack_service.py
src/tasks/: __init__.py  deploy_tasks.py  sync_tasks.py
tests/: test_placeholder.py
tests/api/: test_deployment_routes.py
