[project]
name = "appstore-backend"
version = "0.1.0"
description = "Teaching App Store Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "celery[redis]>=5.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
exclude = [".venv", "__pycache__", ".git"]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F821",  # Ignore undefined names in string annotations (SQLAlchemy relationships)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.models.*"
disable_error_code = ["name-defined"]

[[tool.mypy.overrides]]
module = "src.repositories.base_repository"
disable_error_code = ["misc", "attr-defined", "valid-type", "no-any-return"]

[[tool.mypy.overrides]]
module = "src.core.*"
disable_error_code = ["var-annotated", "no-any-return", "arg-type"]

[[tool.mypy.overrides]]
module = "src.main"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "src.services.*"
disable_error_code = ["attr-defined", "no-any-return"]
